# adaptivetesting

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  README.md  bayes_estimator.ipynb  custom_prior.ipynb  docs  documentation  fisher_information.ipynb  import unittest.py  log_lik.py  mypy.ini  note  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test.ipynb  test.ps1  todo.md
.github/: pull_request_template.md
.github/workflows/: documentation.yml  publish.yml  python-package.yml  python-test.yml  wiki.yml
adaptivetesting/: __init__.py
code_examples/: example_default.py  example_psychopy.py  example_semi.py
docs/: Content_Balancing.md  Exposure_Control.md  Getting_Started.md  Home.md  Simulation.md  Testing_Software.md  _Sidebar.md  adaptivetesting.data.md  adaptivetesting.data.rst  adaptivetesting.implementations.md  adaptivetesting.implementations.rst  adaptivetesting.math.md  adaptivetesting.math.rst  adaptivetesting.models.md  adaptivetesting.models.rst  adaptivetesting.rst  adaptivetesting.services.md  adaptivetesting.services.rst  adaptivetesting.simulation.md  adaptivetesting.simulation.rst  adaptivetesting.tests.rst  conf.py  index.md  index.rst  modules.rst  requirements.txt
documentation/: adaptivetesting.data.txt  adaptivetesting.implementations.txt  adaptivetesting.math.txt  adaptivetesting.models.txt  adaptivetesting.services.txt
examples/: basic.py  real_world.py  simulation.py  testing.py
profiler/: profile_bm_beta_simu.py  profile_bm_normal_simu.py  profile_ml_simu.py  profile_sim_pool.py
(+146 files in other folders)
